corpus/definition_expression.txt
================================================================================
group single
================================================================================
Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (cardinality_expression
      (keyword))))

================================================================================
group multiple
================================================================================
Hello: 'hello' 'world' '!!!';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword))
      (cardinality_expression
        (keyword))
      (cardinality_expression
        (keyword)))))

================================================================================
alternatives single
================================================================================
Hello: 'hello' | 'world';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (alternatives_expression
      (cardinality_expression
        (keyword))
      (cardinality_expression
        (keyword)))))

================================================================================
alternatives multiple
================================================================================
Hello: 'hello' | ',' 'world' | '!!!';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (alternatives_expression
      (alternatives_expression
        (cardinality_expression
          (keyword))
        (group_exression
          (cardinality_expression
            (keyword))
          (cardinality_expression
            (keyword))))
      (cardinality_expression
        (keyword)))))

================================================================================
conditional branch
================================================================================
Hello: <Greet> 'hello';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (conditional_branch_expression
      (parameter_reference)
      (cardinality_expression
        (keyword)))))

================================================================================
conditional branch multiple token
================================================================================
Hello: <Greet> 'hello' 'world';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (conditional_branch_expression
      (parameter_reference)
      (cardinality_expression
        (keyword))
      (cardinality_expression
        (keyword)))))

================================================================================
unordered group
================================================================================
Hello: 'hello' & 'world';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (unordered_group_expression
      (cardinality_expression
        (keyword))
      (cardinality_expression
        (keyword)))))

================================================================================
unordered group multiple
================================================================================
Hello: 'hello' & ',' 'world' & '!!!';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (unordered_group_expression
      (unordered_group_expression
        (cardinality_expression
          (keyword))
        (group_exression
          (cardinality_expression
            (keyword))
          (cardinality_expression
            (keyword))))
      (cardinality_expression
        (keyword)))))

================================================================================
complex definition
================================================================================
Hello: 'hello' | ',' & 'world' | '!!!';
Hello: 'hello' & ',' | 'world' & '!!!';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (alternatives_expression
      (alternatives_expression
        (cardinality_expression
          (keyword))
        (unordered_group_expression
          (cardinality_expression
            (keyword))
          (cardinality_expression
            (keyword))))
      (cardinality_expression
        (keyword))))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (alternatives_expression
      (unordered_group_expression
        (cardinality_expression
          (keyword))
        (cardinality_expression
          (keyword)))
      (unordered_group_expression
        (cardinality_expression
          (keyword))
        (cardinality_expression
          (keyword))))))
